0023769: Eliminate the dependence on X11 libs on Mac OS X Removed ImageUtility package as it is no longer used. Disabled Xw package building on Mac OS X when Cocoa used.